Feachures addded: 1) DifficultyLevels; 2) menu; Recursion removed; Structure refactored a bit.