@@ -2,56 +2,82 @@ package org.example;
 
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
 import java.util.Random;
 import java.util.Scanner;
 import java.util.stream.Collectors;
 
 public class Game {
-    public boolean statusOfGame;
-    private int errorsNumber;
-    private String word;
-    private String foundWord;
-    private String errors;
 
-    public static void start() {
-        Game game = new Game();
-        game.statusOfGame = true;
-        game.setErrorsNumber(6);
-        printHangMan(game.getErrorsNumber());
-        game.turn();
+    public String foundSymbols = "[^";
+    private boolean isPlayingGame;
+    private int playerLives;
+    private String secretWord;
+    private String secretWordMask;
+    private String errorsVault;
+
+    public static void start(int difficultyLevelFromUser) {
+        Game game = new Game(difficultyLevelFromUser);
+        while (game.getIsPlayingGame()) {
+            game.turn();
+        }
     }
 
+    public void progressView() {
+        System.out.println("Вам задагадо слово из " + this.getSecretWord().length() + " букв");
+        if (!this.getErrorsVault().isEmpty()) {
+            System.out.println("Вы совершили эти ошибки:");
+            System.out.println(this.getErrorsVault());
+        }
+
+        System.out.println("Вы угадали:" + this.getSecretWordMask());
+    }
     public void turn() {
-        while(this.statusOfGame) {
-            this.gameStatus();
-            System.out.println("Введите букву");
-            String symbol = (new Scanner(System.in)).nextLine();
-            symbol = this.validateError(validateSymbol(symbol));
+        while(this.isPlayingGame) {
+            terminalFlush();
+            printHangMan(this.getPlayerLives());
+            this.progressView();
+            String symbol = this.getSymbolFromUser(new Scanner(System.in)).toLowerCase();
             this.isContainsInWord(symbol);
-            if (this.getWord().equals(this.getFoundWord())) {
-                System.out.println("Вы победили! Отгаданное слово: " + this.getFoundWord());
-                this.statusOfGame = false;
-            }
-
-            if (this.getErrorsNumber() == 0) {
-                String answer = this.getWord();
-                System.out.println("Вы проиграли. Загаданное слово: \"" + answer + "\" Вы отгадали: " + this.getFoundWord());
-                this.statusOfGame = false;
-            }
+            this.finishCheck();
         }
 
     }
 
-    public static String validateSymbol(String symbol) {
-        if (symbol.matches("[А-яёЁ]{1}")) {
-            return symbol.toLowerCase();
-        } else {
-            System.out.println("Некорректный ввод, пожалуйста попробуйте еще:");
-            symbol = (new Scanner(System.in)).nextLine();
-            return validateSymbol(symbol).toLowerCase();
+    public void finishCheck(){
+        if (this.getSecretWord().equals(this.getSecretWordMask())) {
+            System.out.println("Вы победили! Отгаданное слово: " + this.getSecretWordMask());
+            this.setPlayingGame(false);
         }
+        if (this.getPlayerLives() == 0) {
+            String answer = this.getSecretWord();
+            System.out.println("Вы проиграли. Загаданное слово: \"" + answer + "\" Вы отгадали: " + this.getSecretWordMask());
+            this.setPlayingGame(false);
+        }
+    }
+
+    public String getSymbolFromUser(Scanner scanner) {
+        System.out.println("Введите букву");
+        String symbol = scanner.nextLine();
+        while(this.validateRepeat(symbol) || !validateSymbol(symbol)){
+            if (this.validateRepeat(symbol)){
+                System.out.println("Вы уже вводили данный символ, пожалуйста введите новую догадку");
+                symbol = scanner.nextLine();
+            } else if (!validateSymbol(symbol)) {
+                System.out.println("Некорректный ввод, пожалуйста попробуйте еще:");
+                symbol = scanner.nextLine();
+            }
+        }
+        return symbol;
+    }
+
+    public Boolean validateRepeat(String symbol){
+        return (this.getErrorsVault().contains(symbol) || this.getSecretWordMask().contains(symbol));
+    }
+
+    public static Boolean validateSymbol(String symbol) {
+        return (symbol.matches("[А-яёЁ]"));
     }
 
     public static void printHangMan(int errorsNumber) {
@@ -76,105 +102,105 @@ public class Game {
                 break;
             case 6:
                 System.out.println(Hangs.FIRSTHANG.getHang());
+                break;
+            case 7:
+                break;
+            case 8:
+                break;
         }
 
         System.out.println("У вас осталось: " + errorsNumber + " ошибки");
     }
 
     public void isContainsInWord(String symbol) {
-        String foundWord;
-        if (this.getWord().contains(symbol)) {
-            int i = 0;
-            char[] foundWordArr = this.getFoundWord().toCharArray();
-            String[] symbols = this.getWord().split(symbol);
-
-
-            for (String el : symbols) {
-                i += el.length();
-                if (i < this.getFoundWord().length()) {
-                    foundWordArr[i] = symbol.charAt(0);
-                    ++i;
-                }
-            }
-
-            this.setFoundWord("");
-            for (char foundSymbol : foundWordArr) {
-                foundWord = this.getFoundWord();
-                this.setFoundWord(foundWord + foundSymbol);
-            }
+        if (this.getSecretWord().contains(symbol)) {
+            foundSymbols = foundSymbols + symbol;
+            this.setSecretWordMask(this.getSecretWord().replaceAll(this.foundSymbols + "]", "*"));
         } else {
             System.out.println("Такого символа нет");
-            foundWord = this.getErrors();
-            this.setErrors(foundWord + " " + symbol);
-            this.setErrorsNumber(this.getErrorsNumber() - 1);
-            printHangMan(this.getErrorsNumber());
+            this.setErrorsVault(this.getErrorsVault() + " " + symbol);
+            this.setPlayerLives(this.getPlayerLives() - 1);
         }
-
     }
 
-    public String validateError(String symbol) {
-        while(this.getErrors().contains(symbol)) {
-            System.out.println("Вы уже совершали данную ошибку, пожалуйста введите новую догадку");
-            symbol = (new Scanner(System.in)).nextLine();
+    public boolean getIsPlayingGame() {
+        return isPlayingGame;
+    }
+
+    public void setPlayingGame(boolean playingGame) {
+        isPlayingGame = playingGame;
+    }
+
+    public int getPlayerLives() {
+        return this.playerLives;
+    }
+
+    public void setPlayerLives(int playerLives) {
+        this.playerLives = playerLives;
+    }
+
+    public String getSecretWord() {
+        return this.secretWord;
+    }
+
+    public void setSecretWord(String secretWord) {
+        this.secretWord = secretWord;
+    }
+
+    public String getSecretWordMask() {
+        return this.secretWordMask;
+    }
+
+    public void setSecretWordMask(String secretWordMask) {
+        this.secretWordMask = secretWordMask;
+    }
+
+    public String getErrorsVault() {
+        return this.errorsVault;
+    }
+
+    public void setErrorsVault(String errorsVault) {
+        this.errorsVault = errorsVault;
+    }
+
+    private Game(int difficultyLevel) {
+        int secretWordLength;
+        int errorsNumber;
+        switch (difficultyLevel){
+            case 1:
+                secretWordLength = DifficultyLevels.FIRST.getSecretWordLength();
+                errorsNumber = DifficultyLevels.FIRST.getErrorsNumber();
+                break;
+            case 2:
+                secretWordLength = DifficultyLevels.SECOND.getSecretWordLength();
+                errorsNumber = DifficultyLevels.SECOND.getErrorsNumber();
+                break;
+            case 3:
+                secretWordLength = DifficultyLevels.SECOND.getSecretWordLength();
+                errorsNumber = DifficultyLevels.SECOND.getErrorsNumber();
+                break;
+            default:
+                throw new IllegalStateException("Unexpected value: " + difficultyLevel);
         }
-
-        return symbol;
+        this.setErrorsVault("");
+        this.setSecretWord(generateSecretWord(secretWordLength));
+        this.setSecretWordMask(this.getSecretWord().replaceAll("[А-яёЁ]", "*"));
+        this.setPlayingGame(true);
+        this.setPlayerLives(errorsNumber);
     }
-
-    public int getErrorsNumber() {
-        return this.errorsNumber;
-    }
-
-    public void setErrorsNumber(int errorsNumber) {
-        this.errorsNumber = errorsNumber;
-    }
-
-    public String getWord() {
-        return this.word;
-    }
-
-    public void setWord(String word) {
-        this.word = word;
-    }
-
-    public String getFoundWord() {
-        return this.foundWord;
-    }
-
-    public void setFoundWord(String foundWord) {
-        this.foundWord = foundWord;
-    }
-
-    public String getErrors() {
-        return this.errors;
-    }
-
-    public void setErrors(String errors) {
-        this.errors = errors;
-    }
-
-    private Game() {
-        List<String> dict;
-        try {
-            dict = Files.readAllLines(Path.of("src/main/dict/singular.txt"));
-        } catch (IOException var3) {
-            throw new RuntimeException(var3);
-        }
-
+    public static String generateSecretWord(int worldLenth) {
         Random rand = new Random();
-        dict = dict.stream().filter((s) -> s.length() == 5).collect(Collectors.toList());
-        this.setErrors("");
-        this.setWord(dict.get(rand.nextInt(dict.size())));
-        this.setFoundWord(this.getWord().replaceAll("[А-яёЁ]", "*"));
-    }
-
-    public void gameStatus() {
-        System.out.println("Вам задагадо слово из " + this.getWord().length() + " букв");
-        if (!this.getErrors().isEmpty()) {
-            System.out.println("Вы совершили эти ошибки:");
-            System.out.println(this.getErrors());
+        try {
+            List<String> dict = Files.readAllLines(Paths.get("src","main","resources", "singular.txt"))
+                    .stream().filter((s) -> s.length() == worldLenth).toList();
+            return dict.get(rand.nextInt(dict.size()));
+        } catch (IOException e) {
+            throw new RuntimeException(e);
         }
-
-        System.out.println("Вы угадали:" + this.getFoundWord());
+    }
+    public static void terminalFlush(){
+        for (int i = 0; i < 10; i++) {
+            System.out.println("\n");
+        }
     }
 }
